- Added a static placeholder list that tabcompleters can use to retrieve supported placeholders - Fixed an issue where a trailing space would be left in messages from the /sconfig command